Removed redundant code and refactored lambda functions.